README.md updated to cover compilation and executing instructions